# xnat-portal-backend

./: .gitignore  Makefile  README.md  app.js  package-lock.json  package.json  public.pem  pyproject.toml  utils.js
globus-apis/: clientCredentialsGrant.js  client_credentials_grant.js  createAccessRule.js  getIdentity.js  listDirectories.js  makeDirectory.js  make_directory.js  transfer-api.js
routes/: globus-access.js  globus-ls.js  globus-mkdir.js  index.js  projects.js  xnat-import.js  xnat-projects.js  xnat-upload.js  xnat-uploadStatus.js
scripts/: keycloak-token
src/xnat_portal/: app.py
tests/: getProjects.test.js  projects.test.js  test_xnat_portal.py
xnat-apis/: createProjects.js  deleteSession.js  getProjects.js  importAPI.js  startSession.js  uploadStatus.js  userAliasToken.js
xnat_portal/: app.py
